feature: create orders done

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 251,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-13T14:40:23.982121Z",
-     "iopub.status.busy": "2023-06-13T14:40:23.980893Z",
-     "iopub.status.idle": "2023-06-13T14:40:24.500473Z",
-     "shell.execute_reply": "2023-06-13T14:40:24.496795Z",
-     "shell.execute_reply.started": "2023-06-13T14:40:23.982056Z"
+     "iopub.execute_input": "2023-06-13T17:00:38.879141Z",
+     "iopub.status.busy": "2023-06-13T17:00:38.878629Z",
+     "iopub.status.idle": "2023-06-13T17:00:39.356831Z",
+     "shell.execute_reply": "2023-06-13T17:00:39.356272Z",
+     "shell.execute_reply.started": "2023-06-13T17:00:38.879108Z"
     },
     "tags": []
    },
@@ -112,7 +112,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 246,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 252,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-13T14:40:26.553505Z",
-     "iopub.status.busy": "2023-06-13T14:40:26.551899Z",
-     "iopub.status.idle": "2023-06-13T14:40:27.124554Z",
-     "shell.execute_reply": "2023-06-13T14:40:27.123957Z",
-     "shell.execute_reply.started": "2023-06-13T14:40:26.553449Z"
+     "iopub.execute_input": "2023-06-13T17:00:41.748973Z",
+     "iopub.status.busy": "2023-06-13T17:00:41.748490Z",
+     "iopub.status.idle": "2023-06-13T17:00:42.328005Z",
+     "shell.execute_reply": "2023-06-13T17:00:42.327311Z",
+     "shell.execute_reply.started": "2023-06-13T17:00:41.748941Z"
     },
     "tags": []
    },
@@ -1189,7 +1189,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 247,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,12 +1453,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "id": "f2993b94-77a8-4b09-b522-f39021c55131",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T17:00:48.125074Z",
+     "iopub.status.busy": "2023-06-13T17:00:48.123649Z",
+     "iopub.status.idle": "2023-06-13T17:00:48.556088Z",
+     "shell.execute_reply": "2023-06-13T17:00:48.555453Z",
+     "shell.execute_reply.started": "2023-06-13T17:00:48.125002Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "-- (RI-3)\n",
