feature: second index done

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 255,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-13T17:00:38.879141Z",
-     "iopub.status.busy": "2023-06-13T17:00:38.878629Z",
-     "iopub.status.idle": "2023-06-13T17:00:39.356831Z",
-     "shell.execute_reply": "2023-06-13T17:00:39.356272Z",
-     "shell.execute_reply.started": "2023-06-13T17:00:38.879108Z"
+     "iopub.execute_input": "2023-06-13T22:19:09.912312Z",
+     "iopub.status.busy": "2023-06-13T22:19:09.911096Z",
+     "iopub.status.idle": "2023-06-13T22:19:10.401404Z",
+     "shell.execute_reply": "2023-06-13T22:19:10.400868Z",
+     "shell.execute_reply.started": "2023-06-13T22:19:09.912264Z"
     },
     "tags": []
    },
@@ -112,7 +112,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 251,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,36 +1313,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c422052c-0463-46ae-9be1-b6f6ed19d2b9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "-- (RI-1)\n",
-    "\n",
-    "CREATE OR REPLACE FUNCTION underage_employee_func() RETURNS TRIGGER AS\n",
-    "$$\n",
-    "BEGIN\n",
-    "    IF AGE(NEW.bdate) < interval '18 years' THEN\n",
-    "        RAISE EXCEPTION 'O empregado com SSN % não é maior de idade.',\n",
-    "            NEW.ssn;\n",
-    "    END IF;\n",
-    "    RETURN NEW;\n",
-    "END\n",
-    "$$ LANGUAGE plpgsql;\n",
-    "\n",
-    "DROP TRIGGER IF EXISTS underage_employee ON employee;\n",
-    "\n",
-    "CREATE CONSTRAINT TRIGGER underage_employee AFTER INSERT OR UPDATE ON employee\n",
-    "    FOR EACH ROW EXECUTE FUNCTION underage_employee_func();\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5605001d-226d-4d18-85df-df93861acf4e",
    "metadata": {
     "tags": []
@@ -1352,20 +1322,6 @@
     "%%sql\n",
     "\n",
     "ALTER TABLE employee ADD CHECK (AGE(bdate) >= interval '18 years');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7a75a37-2fdc-4edf-aebc-1da6dcc2960e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "INSERT INTO employee VALUES (1029384356, 201528376, '2020-06-15', 'João');"
    ]
   },
   {
@@ -1509,20 +1465,6 @@
     "\n",
     "CREATE CONSTRAINT TRIGGER order_contains AFTER INSERT OR UPDATE ON orders DEFERRABLE INITIALLY DEFERRED\n",
     "    FOR EACH ROW EXECUTE FUNCTION order_contains_func();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b85314-d825-404e-ae25-f6b0e458b1e8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "INSERT INTO orders VALUES (13, 1, '2023-05-20');"
    ]
   },
   {
@@ -1830,156 +1772,6 @@
     "        contains c\n",
     "    INNER JOIN\n",
     "        product USING (sku);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "id": "49f26b8c-fd2c-4c43-bbd6-2b18e4a31dce",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-10T16:22:28.611968Z",
-     "iopub.status.busy": "2023-06-10T16:22:28.610907Z",
-     "iopub.status.idle": "2023-06-10T16:22:29.017516Z",
-     "shell.execute_reply": "2023-06-10T16:22:29.016867Z",
-     "shell.execute_reply.started": "2023-06-10T16:22:28.611915Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'postgresql://db:***@postgres/db'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">6 rows affected.</span>"
-      ],
-      "text/plain": [
-       "6 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>sku</th>\n",
-       "            <th>order_no</th>\n",
-       "            <th>qty</th>\n",
-       "            <th>total_price</th>\n",
-       "            <th>years</th>\n",
-       "            <th>months</th>\n",
-       "            <th>day_of_month</th>\n",
-       "            <th>day_of_week</th>\n",
-       "            <th>city</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>HM21KMPW</td>\n",
-       "            <td>2</td>\n",
-       "            <td>1</td>\n",
-       "            <td>2389.99</td>\n",
-       "            <td>2022</td>\n",
-       "            <td>12</td>\n",
-       "            <td>7</td>\n",
-       "            <td>Wednesday</td>\n",
-       "            <td>Pinhal Novo</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>X00299X9JF</td>\n",
-       "            <td>2</td>\n",
-       "            <td>3</td>\n",
-       "            <td>1.50</td>\n",
-       "            <td>2022</td>\n",
-       "            <td>12</td>\n",
-       "            <td>7</td>\n",
-       "            <td>Wednesday</td>\n",
-       "            <td>Pinhal Novo</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>KA17120203</td>\n",
-       "            <td>4</td>\n",
-       "            <td>40</td>\n",
-       "            <td>100.00</td>\n",
-       "            <td>2023</td>\n",
-       "            <td>1</td>\n",
-       "            <td>5</td>\n",
-       "            <td>Thursday </td>\n",
-       "            <td>Pinhal Novo</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>HM21KMPW</td>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>4779.98</td>\n",
-       "            <td>2023</td>\n",
-       "            <td>1</td>\n",
-       "            <td>17</td>\n",
-       "            <td>Tuesday  </td>\n",
-       "            <td>Rebordosa</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>KS944RUR</td>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>180.00</td>\n",
-       "            <td>2023</td>\n",
-       "            <td>1</td>\n",
-       "            <td>17</td>\n",
-       "            <td>Tuesday  </td>\n",
-       "            <td>Rebordosa</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>HM21KMPW</td>\n",
-       "            <td>8</td>\n",
-       "            <td>2</td>\n",
-       "            <td>4779.98</td>\n",
-       "            <td>2023</td>\n",
-       "            <td>3</td>\n",
-       "            <td>19</td>\n",
-       "            <td>Sunday   </td>\n",
-       "            <td>Rebordosa</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+------------+----------+-----+-------------+-------+--------+--------------+-------------+-------------+\n",
-       "|    sku     | order_no | qty | total_price | years | months | day_of_month | day_of_week |     city    |\n",
-       "+------------+----------+-----+-------------+-------+--------+--------------+-------------+-------------+\n",
-       "|  HM21KMPW  |    2     |  1  |   2389.99   |  2022 |   12   |      7       |  Wednesday  | Pinhal Novo |\n",
-       "| X00299X9JF |    2     |  3  |     1.50    |  2022 |   12   |      7       |  Wednesday  | Pinhal Novo |\n",
-       "| KA17120203 |    4     |  40 |    100.00   |  2023 |   1    |      5       |  Thursday   | Pinhal Novo |\n",
-       "|  HM21KMPW  |    5     |  2  |   4779.98   |  2023 |   1    |      17      |  Tuesday    |  Rebordosa  |\n",
-       "|  KS944RUR  |    5     |  2  |    180.00   |  2023 |   1    |      17      |  Tuesday    |  Rebordosa  |\n",
-       "|  HM21KMPW  |    8     |  2  |   4779.98   |  2023 |   3    |      19      |  Sunday     |  Rebordosa  |\n",
-       "+------------+----------+-----+-------------+-------+--------+--------------+-------------+-------------+"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "SELECT * FROM product_sales;"
    ]
   },
   {
@@ -2352,15 +2144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 256,
    "id": "7a0040a2-b433-4bee-930f-96662fffc974",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-10T18:30:59.029297Z",
-     "iopub.status.busy": "2023-06-10T18:30:59.026242Z",
-     "iopub.status.idle": "2023-06-10T18:30:59.468128Z",
-     "shell.execute_reply": "2023-06-10T18:30:59.467505Z",
-     "shell.execute_reply.started": "2023-06-10T18:30:59.029226Z"
+     "iopub.execute_input": "2023-06-13T22:22:49.296906Z",
+     "iopub.status.busy": "2023-06-13T22:22:49.291935Z",
+     "iopub.status.idle": "2023-06-13T22:22:49.745878Z",
+     "shell.execute_reply": "2023-06-13T22:22:49.745219Z",
+     "shell.execute_reply.started": "2023-06-13T22:22:49.296813Z"
     },
     "tags": []
    },
@@ -2381,7 +2173,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 213,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2391,7 +2183,7 @@
     "\n",
     "DROP INDEX IF EXISTS product_name_idx;\n",
     "\n",
-    "CREATE INDEX product_name_idx ON product (name);"
+    "CREATE INDEX product_name_idx ON product (name) WHERE name LIKE 'A%';"
    ]
   },
   {
@@ -2401,232 +2193,18 @@
    "source": [
     "### Tipo de Índice, Atributos & Justificação\n",
     "\n",
-    "- Indice BTree na tabela product para a coluna name: Visto que tamos a filtrar usando a wildcard 'A%', o postgres pode usar este indice, visto que todos as linhas resultantes da filtragem começam por 'A', logo o indice é util. Utilizamos BTree porque não se trata de igualdade."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "826b376e-074f-403e-82c6-598781056207",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
-   "id": "f98ee1c6-7535-4f7e-a5d0-f378b5e9f376",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-12T20:20:03.823484Z",
-     "iopub.status.busy": "2023-06-12T20:20:03.822973Z",
-     "iopub.status.idle": "2023-06-12T20:20:04.250200Z",
-     "shell.execute_reply": "2023-06-12T20:20:04.249519Z",
-     "shell.execute_reply.started": "2023-06-12T20:20:03.823451Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'postgresql://db:***@postgres/db'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">6 rows affected.</span>"
-      ],
-      "text/plain": [
-       "6 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>tin</th>\n",
-       "            <th>address</th>\n",
-       "            <th>name</th>\n",
-       "            <th>address_1</th>\n",
-       "            <th>sku</th>\n",
-       "            <th>date</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>122365939</td>\n",
-       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
-       "            <td>Molhadinha, Lda.</td>\n",
-       "            <td>Av. Santo Condestável, 1950-011 Lisboa</td>\n",
-       "            <td>TS123456</td>\n",
-       "            <td>2024-01-01</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>135238432</td>\n",
-       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
-       "            <td>Apple</td>\n",
-       "            <td>Campo Pequeno, 1000-082 Lisboa</td>\n",
-       "            <td>KS944RUR</td>\n",
-       "            <td>2024-02-01</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>159438584</td>\n",
-       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
-       "            <td>Oreo</td>\n",
-       "            <td>Praça Duque de Saldanha 1, 1050-094 Lisboa</td>\n",
-       "            <td>KS93528TUT</td>\n",
-       "            <td>2023-12-31</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>154294955</td>\n",
-       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
-       "            <td>Red Bull</td>\n",
-       "            <td>Av. da Liberdade 240 2º Esq, 1250-148 Lisboa</td>\n",
-       "            <td>KA17120203</td>\n",
-       "            <td>2024-01-01</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>165439089</td>\n",
-       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
-       "            <td>ASUS</td>\n",
-       "            <td>Praça Martim Moniz 39, 1150-052 Lisboa</td>\n",
-       "            <td>HM21KMPW</td>\n",
-       "            <td>2025-01-01</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>194355853</td>\n",
-       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
-       "            <td>Epic Games</td>\n",
-       "            <td>Rua do Grilo 84, 1950-144 Lisboa</td>\n",
-       "            <td>X00299X9JF</td>\n",
-       "            <td>2024-12-31</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+\n",
-       "|    tin    |                address                 |       name       |                  address_1                   |    sku     |    date    |\n",
-       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+\n",
-       "| 122365939 |   Avenida Lago 23, 2765-099 Cascais    | Molhadinha, Lda. |    Av. Santo Condestável, 1950-011 Lisboa    |  TS123456  | 2024-01-01 |\n",
-       "| 135238432 |   Avenida Lago 23, 2765-099 Cascais    |      Apple       |        Campo Pequeno, 1000-082 Lisboa        |  KS944RUR  | 2024-02-01 |\n",
-       "| 159438584 |   Avenida Lago 23, 2765-099 Cascais    |       Oreo       |  Praça Duque de Saldanha 1, 1050-094 Lisboa  | KS93528TUT | 2023-12-31 |\n",
-       "| 154294955 | Rua Pé Mouro Armz 108, 2735-542 Sintra |     Red Bull     | Av. da Liberdade 240 2º Esq, 1250-148 Lisboa | KA17120203 | 2024-01-01 |\n",
-       "| 165439089 | Rua Pé Mouro Armz 108, 2735-542 Sintra |       ASUS       |    Praça Martim Moniz 39, 1150-052 Lisboa    |  HM21KMPW  | 2025-01-01 |\n",
-       "| 194355853 | Rua Pé Mouro Armz 108, 2735-542 Sintra |    Epic Games    |       Rua do Grilo 84, 1950-144 Lisboa       | X00299X9JF | 2024-12-31 |\n",
-       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
+    "- Indice B-Tree na coluna name da tabela product, filtrado para apenas os valores que seguem o padrão 'A%'. Apesar de o postgres deveria, em teoria, utilizar um indice B-Tree da coluna sem filtro para este tipo de queries, foi necessário filtrar o indice para apenas as entradas do formato pedido para finalmente o postgres decidir utilizar um indice desta coluna para essa operação.\n",
     "\n",
-    "SELECT * FROM delivery d INNER JOIN supplier USING (TIN);"
+    "    - **Antes:** ![Before](images/index2_before.png)\n",
+    "    - **Depois:** ![After](images/index2_after.png)\n",
+    "    \n",
+    "- Não são necessários indices para os joins, visto que o join já tem à disposição um indice para o sku, o indice de chave primária (default do postgres) do product."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8ce49a-5978-4c96-bd6f-e612f857b031",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 249,
-   "id": "a2039090-615b-4aa1-93cf-d1aa5c2bdadc",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T15:31:25.924016Z",
-     "iopub.status.busy": "2023-06-13T15:31:25.923086Z",
-     "iopub.status.idle": "2023-06-13T15:31:26.333825Z",
-     "shell.execute_reply": "2023-06-13T15:31:26.333217Z",
-     "shell.execute_reply.started": "2023-06-13T15:31:25.923972Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'postgresql://db:***@postgres/db'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>sum</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2391.49</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+---------+\n",
-       "|   sum   |\n",
-       "+---------+\n",
-       "| 2391.49 |\n",
-       "+---------+"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "SELECT SUM(qty*price) FROM contains NATURAL JOIN product WHERE order_no = 2; "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd049d47-0aee-4f6b-bec6-7a488dc7edee",
+   "id": "fde1804b-cd2b-4d44-aa9b-2308d01c381e",
    "metadata": {},
    "outputs": [],
    "source": []
