feature: some touches

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -2029,33 +2029,35 @@
     "\n",
     "A aplicação web foi desenvolvida em Flask, com uso de templates Jinja. Foi feita com base nos ficheiros no ambiente de trabalho da cadeira, em que apenas alterámos os templates fornecidos e fizémos pequenos ajustes no CSS. \n",
     "\n",
-    "Para comunicação com a BD desenvolvida, utilizámos a biblioteca Psycopg 3, que nos permite utilizar várias features para agilizar o desenvolvimento e proteger a aplicação. Estas features incluem pools de conexões, prepared statements, with statements (que dão commit ou rollback no fim do seu scope, dependendo do caso).\n",
+    "Para comunicação com a BD desenvolvida, utilizámos a biblioteca Psycopg 3, que nos permite utilizar várias features para agilizar o desenvolvimento e proteger a aplicação. Estas features incluem pools de conexões, prepared statements, with statements (que estão associados a uma transação e dão commit ou rollback no fim do seu scope, dependendo do caso).\n",
     "\n",
     "Páginas Web:\n",
     "- Home screen: Apresenta algumas métricas sobre o negócio, tais como a contagem de produtos, clientes, encomendas, etc.\n",
-    "- Products: Lista todos os produtos e suas propriedades(sku, preço, EAN e descrição). Permite registar novos produtos,      remover produtos e alterar os respetivos preços e descrições.\n",
+    "- Products: Lista todos os produtos e suas propriedades (sku, preço, EAN e descrição). Permite registar novos produtos, remover produtos e alterar os respetivos preços e descrições.\n",
     "- Suppliers: Lista todos os fornecedores e as suas propriedades (TIN, sku do produto fornecido, morada, data de contrato). Permite registar e remover fornecedores.\n",
     "- Orders: Lista todas as encomendas e as suas propriedades (data e produtos contidos). Permite pagar cada encomenda.\n",
     "- Customers: Lista todos os clientes e as suas propriedades (telefone, e-mail e morada). Permite registar e remover clientes e aceder à lista das suas encomendas. Nas página de encomendas de cada cliente, é possível fazer tudo que é possível fazer na página Orders e também adicionar uma encomenda realizada por esse cliente.\n",
     "\n",
     "Detalhes extra:\n",
-    "Na criação de Orders e Customers, os seus ID's são gerados automaticamente (obtendo o ID máximo na BD e adicionado-lhe 1), durante a transação que adiciona a entidade pretendida. Isto previne problemas de concorrência. \n",
+    "- Na criação de Orders e Customers, os seus ID's são gerados automaticamente (obtendo o ID máximo na BD e adicionado-lhe 1), durante a transação que adiciona a entidade pretendida. Isto previne problemas de concorrência. \n",
     "\n",
-    "As páginas que apenas listam as entidades, possuem um sistema de paginação, controlado por um conjunto de botões no fundo da página. Isto permite melhorar a performance da app, tanto do lado do cliente, como do lado do servidor, em situações que existem muitas entidades de um tipo. \n",
+    "- As páginas que apenas listam as entidades, possuem um sistema de paginação, controlado por um conjunto de botões no fundo da página. Isto permite melhorar a performance da app, tanto do lado do cliente, como do lado do servidor, em situações que existem muitas entidades desse tipo. \n",
+    "\n",
+    "- De forma a melhorar a comunicação com o usuário, sempre que possivel utilizamos mensagens flash (feature do Flask) para comunicar o estado da aplicação. Podem ser mensagens de informação (ex: após realizar, com sucesso, alguma ação que altera a base de dados), de aviso (ex: caso o utilizador esteja a tentar aceder a algo que não existe) ou de erro (quando algo corre realmente mal, ex: falha de comunicação com a base de dados). Estes três tipos de mensagens estão color coded: azul para informação, amarelo para aviso e vermelho para erro.\n",
     "\n",
     "Explicação da estrutura de ficheiros:\n",
-    "- app.py: todo o código python, que dá handle das routes, faz queries a BD, verifica a validade dos dados enviados por formulários e renderiza os templates.\n",
-    "- static/style.css: o único ficheiro estático que define a aparência de todas as páginas da app.\n",
-    "- templates:\n",
-    "    - base.html: template base, herdado por todos os outros templates, define estruturas como a barra de navegação, prompts de mensagens flash, assim como todas as outras informações (como imports de ficheiros CSS).\n",
-    "    - paged.html: template herdado por todas as páginas que possuem um sistema de paginação, define a interface de controlo da paginação, assim como apresenta uma mensagem caso a lista a apresentar esteja vazia.\n",
-    "    - home/home.html: Template usado na homescreen da app, possui retângulos usados para apresentar as métricas do negócio.\n",
-    "    - products/, customers/, orders/, suppliers/: Diretorias que possuem os ficherios associados a cada uma das partes da app, possume um ou mais dos seguintes ficheiros:\n",
-    "        - index.html: herda de paged.html, listando as entidades pretendidas e apresentando as funcionalidades associadas à lista.\n",
-    "        - delete.html: Formulário de confimação da remoção de uma entidade, listando as consequências na forma de warning.\n",
-    "        - new.html: Formulário de criação de uma entidade, pedindo as informações necessárias para tal.\n",
-    "        - edit.html: (Presente apenas em products/) Formulário de edição da entidade que apresenta campos para todas as suas propriedades, desabilitando os campos para as propriedades imutáveis. \n",
-    "        - pay.html: (Presente apenas em orders/) Formulário de confirmação de pagamento de uma encomenda."
+    "- `app.py`: todo o código python, que dá handle das routes, faz queries a BD, verifica a validade dos dados enviados por formulários e renderiza os templates.\n",
+    "- `static/style.css`: o único ficheiro estático que define a aparência de todas as páginas da app.\n",
+    "- `templates/`:\n",
+    "    - `base.html`: template base, herdado por todos os outros templates, define estruturas como a barra de navegação, prompts de mensagens flash, assim como todas as outras informações (como imports de ficheiros CSS).\n",
+    "    - `paged.html`: template herdado por todas as páginas que possuem um sistema de paginação, define a interface de controlo da paginação, assim como apresenta uma mensagem caso a lista a apresentar esteja vazia.\n",
+    "    - `home/home.html`: Template usado na homescreen da app, possui retângulos usados para apresentar as métricas do negócio.\n",
+    "    - `products/`, `customers/`, `orders/`, `suppliers/`: Diretorias que possuem os templates associados a cada uma das partes da app, possuem um ou mais dos seguintes ficheiros:\n",
+    "        - `index.html`: herda de paged.html, listando as entidades pretendidas e apresentando as funcionalidades associadas à lista.\n",
+    "        - `delete.html`: Formulário de confimação da remoção de uma entidade, listando as consequências na forma de warning.\n",
+    "        - `new.html`: Formulário de criação de uma entidade, pedindo as informações necessárias para tal.\n",
+    "        - `edit.html`: (Presente apenas em `products/`) Formulário de edição da entidade que apresenta campos para todas as suas propriedades, desabilitando os campos para as propriedades imutáveis. \n",
+    "        - `pay.html`: (Presente apenas em `orders/`) Formulário de confirmação de pagamento de uma encomenda."
    ]
   },
   {
