fix: a lot of small fixes

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 2,
    "id": "a6545a02-adea-4c57-b704-cfa1f6253e4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:24.385204Z",
-     "iopub.status.busy": "2023-06-14T20:41:24.384938Z",
-     "iopub.status.idle": "2023-06-14T20:41:24.871984Z",
-     "shell.execute_reply": "2023-06-14T20:41:24.871444Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:24.385159Z"
+     "iopub.execute_input": "2023-06-16T14:37:43.200201Z",
+     "iopub.status.busy": "2023-06-16T14:37:43.199783Z",
+     "iopub.status.idle": "2023-06-16T14:37:44.832398Z",
+     "shell.execute_reply": "2023-06-16T14:37:44.831717Z",
+     "shell.execute_reply.started": "2023-06-16T14:37:43.200150Z"
     },
     "tags": []
    },
@@ -41,8 +41,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n",
       "displaylimit: Value None will be treated as 0 (no limit)\n"
      ]
     }
@@ -83,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 3,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T17:06:56.605989Z",
-     "iopub.status.busy": "2023-06-15T17:06:56.603853Z",
-     "iopub.status.idle": "2023-06-15T17:06:57.151149Z",
-     "shell.execute_reply": "2023-06-15T17:06:57.150528Z",
-     "shell.execute_reply.started": "2023-06-15T17:06:56.605883Z"
+     "iopub.execute_input": "2023-06-16T14:37:44.834388Z",
+     "iopub.status.busy": "2023-06-16T14:37:44.834058Z",
+     "iopub.status.idle": "2023-06-16T14:37:45.263988Z",
+     "shell.execute_reply": "2023-06-16T14:37:45.263315Z",
+     "shell.execute_reply.started": "2023-06-16T14:37:44.834370Z"
     },
     "tags": []
    },
@@ -112,7 +110,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 308,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,15 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 4,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T17:06:58.763943Z",
-     "iopub.status.busy": "2023-06-15T17:06:58.762739Z",
-     "iopub.status.idle": "2023-06-15T17:06:59.360934Z",
-     "shell.execute_reply": "2023-06-15T17:06:59.360239Z",
-     "shell.execute_reply.started": "2023-06-15T17:06:58.763895Z"
+     "iopub.execute_input": "2023-06-16T14:37:58.159988Z",
+     "iopub.status.busy": "2023-06-16T14:37:58.159011Z",
+     "iopub.status.idle": "2023-06-16T14:37:58.727382Z",
+     "shell.execute_reply": "2023-06-16T14:37:58.726787Z",
+     "shell.execute_reply.started": "2023-06-16T14:37:58.159952Z"
     },
     "tags": []
    },
@@ -1189,7 +1187,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 309,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,9 +1196,9 @@
     "%%sql\n",
     "-- populate.sql\n",
     "\n",
-    "INSERT INTO customer VALUES (1, 'Pedro', 'pedrofrigolet@gmail.com', '+351 912345678', 'Rua da Boa Nova nº39, 4050-101 Ermesinde');\n",
-    "INSERT INTO customer VALUES (2, 'Miguel', 'migueltavares@gmail.com', '+351 942069697', 'Travessa da Esperança nº14 2ºD, 4410-490 Rebordosa');\n",
-    "INSERT INTO customer VALUES (3, 'José', 'zedopipo@gmail.com', '+351 918008576', 'Rua dos Lusíadas nº14, 2955-108 Pinhal Novo');\n",
+    "INSERT INTO customer VALUES (1, 'Pedro', 'pedrofrigolet@gmail.com', '912345678', 'Rua da Boa Nova nº39, 4050-101 Ermesinde');\n",
+    "INSERT INTO customer VALUES (2, 'Miguel', 'migueltavares@gmail.com', '942069697', 'Travessa da Esperança nº14 2ºD, 4410-490 Rebordosa');\n",
+    "INSERT INTO customer VALUES (3, 'José', 'zedopipo@gmail.com', '918008576', 'Rua dos Lusíadas nº14, 2955-108 Pinhal Novo');\n",
     "\n",
     "INSERT INTO employee VALUES (10293847562, 201928376, '2000-06-15', 'João');\n",
     "INSERT INTO employee VALUES (91827364503, 282736579, '2001-03-15', 'Carlos');\n",
