fix: TINs on notebook format

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -1236,12 +1236,12 @@
     "INSERT INTO product VALUES('HM21KMPW', 'Portátil Gaming ASUS Rog Strix', 'Intel Core i7, 32Gb Ram, RTX 4080, SSD NVMe 1Tb', 2389.99);\n",
     "INSERT INTO product VALUES('X00299X9JF', 'Fortnite 1500 VBUCKS Gift Card', 'Código de acesso a 1500 VBUCKS. Compatível com Windows, Mac, iOS, Android, PlayStation, XBOX, Nintendo Switch.', 0.50);\n",
     "\n",
-    "INSERT INTO supplier VALUES(122365939, 'Molhadinha, Lda.', 'Av. Santo Condestável, 1950-011 Lisboa', 'TS123456', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES(135238432, 'Apple', 'Campo Pequeno, 1000-082 Lisboa', 'KS944RUR', '2024-02-01');\n",
-    "INSERT INTO supplier VALUES(159438584, 'Oreo', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'KS93528TUT', '2023-12-31');\n",
-    "INSERT INTO supplier VALUES(154294955, 'Red Bull', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'KA17120203', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES(165439089, 'ASUS', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'HM21KMPW', '2025-01-01');\n",
-    "INSERT INTO supplier VALUES(194355853, 'Epic Games', 'Rua do Grilo 84, 1950-144 Lisboa', 'X00299X9JF', '2024-12-31');\n",
+    "INSERT INTO supplier VALUES('PT122365939', 'Molhadinha, Lda.', 'Av. Santo Condestável, 1950-011 Lisboa', 'TS123456', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES('PT135238432', 'Apple', 'Campo Pequeno, 1000-082 Lisboa', 'KS944RUR', '2024-02-01');\n",
+    "INSERT INTO supplier VALUES('PT159438584', 'Oreo', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'KS93528TUT', '2023-12-31');\n",
+    "INSERT INTO supplier VALUES('PT154294955', 'Red Bull', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'KA17120203', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES('PT165439089', 'ASUS', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'HM21KMPW', '2025-01-01');\n",
+    "INSERT INTO supplier VALUES('PT194355853', 'Epic Games', 'Rua do Grilo 84, 1950-144 Lisboa', 'X00299X9JF', '2024-12-31');\n",
     "\n",
     "INSERT INTO works VALUES(10293847562, 'Logística', 'Rua Cid Tomar 49, 2830-573 Palhais');\n",
     "INSERT INTO works VALUES(10293847562, 'Recursos Humanos', 'Avenida Lago 23, 2765-099 Cascais');\n",
