--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a6545a02-adea-4c57-b704-cfa1f6253e4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T14:37:43.200201Z",
-     "iopub.status.busy": "2023-06-16T14:37:43.199783Z",
-     "iopub.status.idle": "2023-06-16T14:37:44.832398Z",
-     "shell.execute_reply": "2023-06-16T14:37:44.831717Z",
-     "shell.execute_reply.started": "2023-06-16T14:37:43.200150Z"
+     "iopub.execute_input": "2023-06-16T15:15:00.969007Z",
+     "iopub.status.busy": "2023-06-16T15:15:00.964714Z",
+     "iopub.status.idle": "2023-06-16T15:15:01.411601Z",
+     "shell.execute_reply": "2023-06-16T15:15:01.410943Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:00.968860Z"
     },
     "tags": []
    },
@@ -41,6 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n",
       "displaylimit: Value None will be treated as 0 (no limit)\n"
      ]
     }
@@ -81,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T14:37:44.834388Z",
-     "iopub.status.busy": "2023-06-16T14:37:44.834058Z",
-     "iopub.status.idle": "2023-06-16T14:37:45.263988Z",
-     "shell.execute_reply": "2023-06-16T14:37:45.263315Z",
-     "shell.execute_reply.started": "2023-06-16T14:37:44.834370Z"
+     "iopub.execute_input": "2023-06-16T15:15:01.412636Z",
+     "iopub.status.busy": "2023-06-16T15:15:01.412495Z",
+     "iopub.status.idle": "2023-06-16T15:15:01.832268Z",
+     "shell.execute_reply": "2023-06-16T15:15:01.831627Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:01.412625Z"
     },
     "tags": []
    },
@@ -110,7 +112,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T14:37:58.159988Z",
-     "iopub.status.busy": "2023-06-16T14:37:58.159011Z",
-     "iopub.status.idle": "2023-06-16T14:37:58.727382Z",
-     "shell.execute_reply": "2023-06-16T14:37:58.726787Z",
-     "shell.execute_reply.started": "2023-06-16T14:37:58.159952Z"
+     "iopub.execute_input": "2023-06-16T15:15:01.834193Z",
+     "iopub.status.busy": "2023-06-16T15:15:01.832918Z",
+     "iopub.status.idle": "2023-06-16T15:15:02.359751Z",
+     "shell.execute_reply": "2023-06-16T15:15:02.359088Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:01.834176Z"
     },
     "tags": []
    },
@@ -1112,84 +1114,15 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(psycopg2.errors.ForeignKeyViolation) insert or update on table \"delivery\" violates foreign key constraint \"delivery_tin_fkey\"\n",
+      "DETAIL:  Key (tin)=(122365939) is not present in table \"supplier\".\n",
+      "\n",
+      "[SQL: INSERT INTO delivery VALUES('Avenida Lago 23, 2765-099 Cascais', '122365939');]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/gkpj)\n"
+     ]
     }
    ],
    "source": [
@@ -1310,15 +1243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "id": "5605001d-226d-4d18-85df-df93861acf4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:25.869180Z",
-     "iopub.status.busy": "2023-06-14T20:41:25.868679Z",
-     "iopub.status.idle": "2023-06-14T20:41:26.303472Z",
-     "shell.execute_reply": "2023-06-14T20:41:26.302714Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:25.869161Z"
+     "iopub.execute_input": "2023-06-16T15:15:02.361365Z",
+     "iopub.status.busy": "2023-06-16T15:15:02.361187Z",
+     "iopub.status.idle": "2023-06-16T15:15:02.743217Z",
+     "shell.execute_reply": "2023-06-16T15:15:02.742555Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:02.361351Z"
     },
     "tags": []
    },
@@ -1339,7 +1272,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 262,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,15 +1293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 9,
    "id": "188ec396-6e55-4fd3-b436-dcafe454f677",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:26.306666Z",
-     "iopub.status.busy": "2023-06-14T20:41:26.306167Z",
-     "iopub.status.idle": "2023-06-14T20:41:26.700456Z",
-     "shell.execute_reply": "2023-06-14T20:41:26.699713Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:26.306643Z"
+     "iopub.execute_input": "2023-06-16T15:15:02.744694Z",
+     "iopub.status.busy": "2023-06-16T15:15:02.744542Z",
+     "iopub.status.idle": "2023-06-16T15:15:03.111275Z",
+     "shell.execute_reply": "2023-06-16T15:15:03.110747Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:02.744682Z"
     },
     "tags": []
    },
@@ -1389,7 +1322,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 263,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,15 +1396,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "id": "f2993b94-77a8-4b09-b522-f39021c55131",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:26.701387Z",
-     "iopub.status.busy": "2023-06-14T20:41:26.701213Z",
-     "iopub.status.idle": "2023-06-14T20:41:27.078530Z",
-     "shell.execute_reply": "2023-06-14T20:41:27.077902Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:26.701372Z"
+     "iopub.execute_input": "2023-06-16T15:15:03.112244Z",
+     "iopub.status.busy": "2023-06-16T15:15:03.111971Z",
+     "iopub.status.idle": "2023-06-16T15:15:03.476535Z",
+     "shell.execute_reply": "2023-06-16T15:15:03.475946Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:03.112221Z"
     },
     "tags": []
    },
@@ -1492,7 +1425,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 264,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,15 +1484,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "id": "5b79ced0-279d-4e04-921e-0c831d7a79f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:27.079368Z",
-     "iopub.status.busy": "2023-06-14T20:41:27.079220Z",
-     "iopub.status.idle": "2023-06-14T20:41:27.481779Z",
-     "shell.execute_reply": "2023-06-14T20:41:27.480886Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:27.079354Z"
+     "iopub.execute_input": "2023-06-16T15:15:03.477441Z",
+     "iopub.status.busy": "2023-06-16T15:15:03.477263Z",
+     "iopub.status.idle": "2023-06-16T15:15:03.829793Z",
+     "shell.execute_reply": "2023-06-16T15:15:03.829272Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:03.477427Z"
     },
     "tags": []
    },
@@ -1614,7 +1547,7 @@
        "+---------+-----------+"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,15 +1601,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 12,
    "id": "aadac5e9-d0e4-46e0-bab5-33d00b863884",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:27.483012Z",
-     "iopub.status.busy": "2023-06-14T20:41:27.482702Z",
-     "iopub.status.idle": "2023-06-14T20:41:27.873243Z",
-     "shell.execute_reply": "2023-06-14T20:41:27.872603Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:27.482992Z"
+     "iopub.execute_input": "2023-06-16T15:15:03.830554Z",
+     "iopub.status.busy": "2023-06-16T15:15:03.830417Z",
+     "iopub.status.idle": "2023-06-16T15:15:04.197701Z",
+     "shell.execute_reply": "2023-06-16T15:15:04.197053Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:03.830542Z"
     },
     "tags": []
    },
@@ -1696,18 +1629,6 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
@@ -1715,21 +1636,17 @@
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Carlos</td>\n",
-       "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "+--------+\n",
-       "|  name  |\n",
-       "+--------+\n",
-       "| Carlos |\n",
-       "+--------+"
+       "+------+\n",
+       "| name |\n",
+       "+------+\n",
+       "+------+"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,15 +1690,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 13,
    "id": "9376e89f-ff69-418d-a143-0cfb792b13d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:27.874088Z",
-     "iopub.status.busy": "2023-06-14T20:41:27.873918Z",
-     "iopub.status.idle": "2023-06-14T20:41:28.259548Z",
-     "shell.execute_reply": "2023-06-14T20:41:28.258986Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:27.874074Z"
+     "iopub.execute_input": "2023-06-16T15:15:04.198574Z",
+     "iopub.status.busy": "2023-06-16T15:15:04.198388Z",
+     "iopub.status.idle": "2023-06-16T15:15:04.561607Z",
+     "shell.execute_reply": "2023-06-16T15:15:04.561113Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:04.198560Z"
     },
     "tags": []
    },
@@ -1891,7 +1808,7 @@
        "+-----------+-------+"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,15 +1859,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 14,
    "id": "0bbb2226-5de4-4051-b4c0-9130bd4904f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:48:41.712524Z",
-     "iopub.status.busy": "2023-06-14T20:48:41.710987Z",
-     "iopub.status.idle": "2023-06-14T20:48:42.169578Z",
-     "shell.execute_reply": "2023-06-14T20:48:42.168797Z",
-     "shell.execute_reply.started": "2023-06-14T20:48:41.712458Z"
+     "iopub.execute_input": "2023-06-16T15:15:04.562266Z",
+     "iopub.status.busy": "2023-06-16T15:15:04.562127Z",
+     "iopub.status.idle": "2023-06-16T15:15:04.931337Z",
+     "shell.execute_reply": "2023-06-16T15:15:04.930822Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:04.562254Z"
     },
     "tags": []
    },
@@ -1971,7 +1888,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 279,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,15 +2001,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 15,
    "id": "bf12ce01-15c0-4e7c-b329-576dd344ebf6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T21:03:26.898665Z",
-     "iopub.status.busy": "2023-06-14T21:03:26.898183Z",
-     "iopub.status.idle": "2023-06-14T21:03:27.427525Z",
-     "shell.execute_reply": "2023-06-14T21:03:27.427119Z",
-     "shell.execute_reply.started": "2023-06-14T21:03:26.898633Z"
+     "iopub.execute_input": "2023-06-16T15:15:04.932059Z",
+     "iopub.status.busy": "2023-06-16T15:15:04.931946Z",
+     "iopub.status.idle": "2023-06-16T15:15:06.441964Z",
+     "shell.execute_reply": "2023-06-16T15:15:06.441503Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:04.932048Z"
     },
     "tags": []
    },
@@ -6267,7 +6184,7 @@
        "+------------+-------------+--------+--------------+-------------+----------+-----+"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6305,15 +6222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 16,
    "id": "7aac0901-02ad-4a40-964e-dc03430f8e77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T21:03:49.324122Z",
-     "iopub.status.busy": "2023-06-14T21:03:49.323132Z",
-     "iopub.status.idle": "2023-06-14T21:03:49.739393Z",
-     "shell.execute_reply": "2023-06-14T21:03:49.738638Z",
-     "shell.execute_reply.started": "2023-06-14T21:03:49.324082Z"
+     "iopub.execute_input": "2023-06-16T15:15:06.442559Z",
+     "iopub.status.busy": "2023-06-16T15:15:06.442417Z",
+     "iopub.status.idle": "2023-06-16T15:15:06.931474Z",
+     "shell.execute_reply": "2023-06-16T15:15:06.930967Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:06.442542Z"
     },
     "tags": []
    },
@@ -6484,7 +6401,7 @@
        "+--------+-------------+-----------------------+"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6552,15 +6469,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 17,
    "id": "eee442d4-8f78-4493-a320-74a4a8de0721",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:30.059999Z",
-     "iopub.status.busy": "2023-06-14T20:41:30.059875Z",
-     "iopub.status.idle": "2023-06-14T20:41:30.438982Z",
-     "shell.execute_reply": "2023-06-14T20:41:30.438298Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:30.059987Z"
+     "iopub.execute_input": "2023-06-16T15:15:06.932240Z",
+     "iopub.status.busy": "2023-06-16T15:15:06.932095Z",
+     "iopub.status.idle": "2023-06-16T15:15:07.425055Z",
+     "shell.execute_reply": "2023-06-16T15:15:07.424336Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:06.932227Z"
     },
     "tags": []
    },
@@ -6581,7 +6498,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 271,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6624,15 +6541,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 18,
    "id": "7a0040a2-b433-4bee-930f-96662fffc974",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-14T20:41:30.441248Z",
-     "iopub.status.busy": "2023-06-14T20:41:30.440772Z",
-     "iopub.status.idle": "2023-06-14T20:41:30.815291Z",
-     "shell.execute_reply": "2023-06-14T20:41:30.814764Z",
-     "shell.execute_reply.started": "2023-06-14T20:41:30.441229Z"
+     "iopub.execute_input": "2023-06-16T15:15:07.426916Z",
+     "iopub.status.busy": "2023-06-16T15:15:07.426757Z",
+     "iopub.status.idle": "2023-06-16T15:15:07.908386Z",
+     "shell.execute_reply": "2023-06-16T15:15:07.907724Z",
+     "shell.execute_reply.started": "2023-06-16T15:15:07.426901Z"
     },
     "tags": []
    },
@@ -6653,7 +6570,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 272,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
